edit about us with a new section

--- a/about_us.html
+++ b/about_us.html
@@ -6,6 +6,15 @@
 <body>
     <h1>About Us</h1>
 	<p>Our company is committed to delivering the best web solutions. We specialize in building intuitive and powerful websites.</p>
+	
+	<section id="features">
+            <h2>Features</h2>
+            <ul>
+                <li>Responsive Design</li>
+                <li>Interactive Elements</li>
+                <li>Modern Technologies</li>
+            </ul>
+    </section>
 
 </body>
 </html>
