--- a/about_us.html
+++ b/about_us.html
@@ -4,7 +4,7 @@
     <title>About</title>
 </head>
 <body>
-    <h1>About Us</h1>
+    <h1>About Us - update header </h1>
 	<p>Our company is committed to delivering the best web solutions. We specialize in building intuitive and powerful websites.</p>
 	
 	<section id="features">
